Fix broken css

--- a/app/assets/stylesheets/blocked-page.css
+++ b/app/assets/stylesheets/blocked-page.css
@@ -17,5 +17,4 @@
 
     font-size: 2rem;
     text-align: center;
-    font: 
 }
